[package]
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
name = "stm32f7-discovery"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
cortex-m-semihosting = "0.3.0"
alloc-cortex-m = "0.3.4"

[dependencies.stm32f7x6]
git = "https://github.com/embed-rs/stm32f7x6.git"
features = ["rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
