cargo-features = ["default-run"]

[package]
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
name = "stm32f7-discovery"
version = "0.1.0"
edition = "2018"
default-run = "async-await"

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.6.4"
cortex-m-semihosting = "0.3.0"
alloc-cortex-m = "0.3.4"
spin = "0.4.8"
bitflags = "1.0.3"
volatile = "0.2.4"
bit_field = "0.9.0"
bare-metal = "0.2.3"
embedded-hal = "0.2.1"
pin-utils = "0.1.0-alpha"
core = {path = "core"}

[dependencies.stm32f7]
version = "0.3.2"
features = ["stm32f7x6", "rt"]

[dependencies.arrayvec]
version = "0.4.7"
default-features = false

[dependencies.byteorder]
version = "1.0"
default-features = false

[dependencies.smoltcp]
#version = "0.5.0"
git = "https://github.com/astro/smoltcp.git"
branch = "dhcp"
default-features = false
features = ["alloc", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "proto-ipv4", "proto-dhcpv4"]

[dependencies.font8x8]
version = "0.2.4"
default-features = false
features = ["unicode"]

[dependencies.futures-preview]
git = "https://github.com/rust-lang-nursery/futures-rs.git"
default-features = false
features = ["alloc", "nightly"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
incremental = false # TODO: remove after https://github.com/rust-lang/cargo/pull/6610 lands in nightly

[patch.crates-io.cortex-m-rt]
# TODO: replace with crates.io version when new version is released
git = "https://github.com/rust-embedded/cortex-m-rt.git"
