[package]
name = "interrupture"
version = "0.1.0"
authors = ["Oliver Scherer <github35764891676564198441@oli-obk.de>"]
edition = "2018"
description = "a HAL trait for `crossbeam`-like interrupt handling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/embed-rs/stm32f7-discovery"

[dependencies]
bare-metal = "0.2.3"
